--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,22 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Expo
+.expo/
+.expo-shared/
+web-build/
+
+# EAS
+.eas/
+
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# Secrets
+*.pem
+*.p12
+*.key
+secrets/
