--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
     "expo": "^54.0.30",
-    "react": "19.2.0",
-    "react-native": "0.83.1",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.0.0",
+    "react-native-screens": "~4.16.0",
     "uuid": "^11.0.0"
   },
   "devDependencies": {
@@ -33,7 +33,7 @@
     "@react-native/metro-config": "0.83.1",
     "@react-native/typescript-config": "0.83.1",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.2.0",
+    "@types/react": "~19.1.10",
     "@types/react-test-renderer": "^19.1.0",
     "@types/uuid": "^10.0.0",
     "eslint": "^8.19.0",
